list of tables and figures

--- a/bibliography/__latexindent_temp.tex
+++ b/bibliography/__latexindent_temp.tex
@@ -1,16 +1,15 @@
-@article{Finkelstein2017b,
-abstract = {The ability of protein chains to spontaneously form their spatial structures is a long-standing puzzle in molecular biology. Experimentally measured folding times of single-domain globular proteins range from microseconds to hours: the difference (10–11 orders of magnitude) is the same as that between the life span of a mosquito and the age of the universe. This review describes physical theories of rates of overcoming the free-energy barrier separating the natively folded (N) and unfolded (U) states of protein chains in both directions: “U-to-N” and “N-to-U”. In the theory of protein folding rates a special role is played by the point of thermodynamic (and kinetic) equilibrium between the native and unfolded state of the chain; here, the theory obtains the simplest form. Paradoxically, a theoretical estimate of the folding time is easier to get from consideration of protein unfolding (the “N-to-U” transition) rather than folding, because it is easier to outline a good unfolding pathway of any structure than a good folding pathway that leads to the stable fold, which is yet unknown to the folding protein chain. And since the rates of direct and reverse reactions are equal at the equilibrium point (as follows from the physical “detailed balance” principle), the estimated folding time can be derived from the estimated unfolding time. Theoretical analysis of the “N-to-U” transition outlines the range of protein folding rates in a good agreement with experiment. Theoretical analysis of folding (the “U-to-N” transition), performed at the level of formation and assembly of protein secondary structures, outlines the upper limit of protein folding times (i.e., of the time of search for the most stable fold). Both theories come to essentially the same results; this is not a surprise, because they describe overcoming one and the same free-energy barrier, although the way to the top of this barrier from the side of the unfolded state is very different from the way from the side of the native state; and both theories agree with experiment. In addition, they predict the maximal size of protein domains that fold under solely thermodynamic (rather than kinetic) control and explain the observed maximal size of the “foldable” protein domains.},
-author = {Finkelstein, Alexei V. and Badretdin, Azat J. and Galzitskaya, Oxana V. and Ivankov, Dmitry N. and Bogatyreva, Natalya S. and Garbuzynskiy, Sergiy O.},
-doi = {10.1016/j.plrev.2017.01.025},
-file = {:Users/anupadkh/Library/Application Support/Mendeley Desktop/Downloaded/Finkelstein et al. - 2017 - There and back again Two views on the protein folding puzzle(3).pdf:pdf},
-issn = {15710645},
-journal = {Phys. Life Rev.},
-keywords = {Folding funnel,Free-energy landscape,Levinthal's paradox,Phase separation,Protein folding,Protein secondary structure assembly},
-mendeley-groups = {FILES{\_}unmanaged,Protein Modeling/Folding},
-pages = {56--71},
-publisher = {Elsevier B.V.},
-title = {{There and back again: Two views on the protein folding puzzle}},
-url = {http://dx.doi.org/10.1016/j.plrev.2017.01.025},
-volume = {21},
-year = {2017}
+@article{Leelananda2016,
+abstract = {The process for drug discovery and development is challenging, time consuming and expensive. Computer-aided drug discovery (CADD) tools can act as a virtual shortcut, assisting in the expedition of this long process and potentially reducing the cost of research and development. Today CADD has become an effective and indispensable tool in therapeutic development. The human genome project has made available a substantial amount of sequence data that can be used in various drug discovery projects. Additionally, increasing knowledge of biological structures, as well as increasing computer power have made it possible to use computational methods effectively in various phases of the drug discovery and development pipeline. The importance of in silico tools is greater than ever before and has advanced pharmaceutical research. Here we present an overview of computational methods used in different facets of drug discovery and highlight some of the recent successes. In this review, both structure-based and ligand-based drug discovery methods are discussed. Advances in virtual high-throughput screening, protein structure prediction methods, protein-ligand docking, pharmacophore modeling and QSAR techniques are reviewed.},
+author = {Leelananda, Sumudu P. and Lindert, Steffen},
+doi = {10.3762/bjoc.12.267},
+file = {:Users/anupadkh/Downloads/sliwoski2013.pdf:pdf},
+issn = {18605397},
+journal = {Beilstein J. Org. Chem.},
+keywords = {ADME,Computer-aided drug design,Docking,Free energy,High-throughput screening,LBDD,Lead optimization,Machine learning,Pharmacophore,QSAR,SBDD,Scoring,Target flexibility},
+mendeley-groups = {Protein{\_}Drug{\_}Interaction/Drug{\_}Discovery},
+number = {January},
+pages = {2694--2718},
+title = {{Computational methods in drug discovery}},
+volume = {12},
+year = {2016}
 }
