--- a/bibliography/glossary.tex
+++ b/bibliography/glossary.tex
@@ -29,3 +29,5 @@
 \newacronym{pssmdt}{PSSM-DT}{Position Specific Scoring Matrix Distance Transformation}
 \newacronym{edt}{EDT}{Evolutionary Distance Transformation}
 \newacronym{rpt}{RPT}{Residue Probing Transformation}
+\newacronym{casp}{CASP}{Critical Assessment of Structure Prediction}
+\newacronym{nfl}{NFL}{No Free Lunch Algorithm}
