--- a/bibliography/sample.bib
+++ b/bibliography/sample.bib
@@ -1133,3 +1133,33 @@ url = {http://dx.doi.org/10.1016/j.plrev.2017.01.025},
 volume = {21},
 year = {2017}
 }
+@article{Wolpert2005,
+abstract = { Recent work on the foundational underpinnings of black-box optimization has begun to uncover a rich mathematical structure. In particular, it is now known that an inner product between the optimization algorithm and the distribution of optimization problems likely to be encountered fixes the distribution over likely performances in running that algorithm. One ramification of this is the "No Free Lunch" (NFL) theorems, which state that any two algorithms are equivalent when their performance is averaged across all possible problems. This highlights the need for exploiting problem-specific knowledge to achieve better than random performance. In this paper, we present a general framework covering most optimization scenarios. In addition to the optimization scenarios addressed in the NFL results, this framework covers multiarmed bandit problems and evolution of multiple coevolving players. As a particular instance of the latter, it covers "self-play" problems. In these problems, the set of players work together to produce a champion, who then engages one or more antagonists in a subsequent multiplayer game. In contrast to the traditional optimization case where the NFL results hold, we show that in self-play there are free lunches: in coevolution some algorithms have better performance than other algorithms, averaged across all possible problems. However, in the typical coevolutionary scenarios encountered in biology, where there is no champion, the NFL theorems still hold.},
+author = {Wolpert, David H. and Macready, William G.},
+doi = {10.1109/TEVC.2005.856205},
+file = {:Users/anupadkh/Downloads/wolpert2005.pdf:pdf},
+issn = {1089778X},
+journal = {IEEE Trans. Evol. Comput.},
+keywords = {Coevolution,Multiarmed bandits,No free lunch,Optimizations,Self-play},
+mendeley-groups = {Protein{\_}Drug{\_}Interaction/Algorithms},
+number = {6},
+pages = {721--735},
+title = {{Coevolutionary free lunches}},
+volume = {9},
+year = {2005}
+}
+@article{Leelananda2016,
+abstract = {The process for drug discovery and development is challenging, time consuming and expensive. Computer-aided drug discovery (CADD) tools can act as a virtual shortcut, assisting in the expedition of this long process and potentially reducing the cost of research and development. Today CADD has become an effective and indispensable tool in therapeutic development. The human genome project has made available a substantial amount of sequence data that can be used in various drug discovery projects. Additionally, increasing knowledge of biological structures, as well as increasing computer power have made it possible to use computational methods effectively in various phases of the drug discovery and development pipeline. The importance of in silico tools is greater than ever before and has advanced pharmaceutical research. Here we present an overview of computational methods used in different facets of drug discovery and highlight some of the recent successes. In this review, both structure-based and ligand-based drug discovery methods are discussed. Advances in virtual high-throughput screening, protein structure prediction methods, protein-ligand docking, pharmacophore modeling and QSAR techniques are reviewed.},
+author = {Leelananda, Sumudu P. and Lindert, Steffen},
+doi = {10.3762/bjoc.12.267},
+file = {:Users/anupadkh/Downloads/sliwoski2013.pdf:pdf},
+issn = {18605397},
+journal = {Beilstein J. Org. Chem.},
+keywords = {ADME,Computer-aided drug design,Docking,Free energy,High-throughput screening,LBDD,Lead optimization,Machine learning,Pharmacophore,QSAR,SBDD,Scoring,Target flexibility},
+mendeley-groups = {Protein{\_}Drug{\_}Interaction/Drug{\_}Discovery},
+number = {January},
+pages = {2694--2718},
+title = {{Computational methods in drug discovery}},
+volume = {12},
+year = {2016}
+}
