--- a/mainmatter/1-Introduction/introduction.tex
+++ b/mainmatter/1-Introduction/introduction.tex
@@ -1,15 +1,10 @@
 \chapter{Introduction}
-
-
 \section{Background}
-Finding the interaction of drugs and proteins based simply on primary structure information of drugs and proteins is one of the many challenges faced in drug-synthesis process.
+Computer-aided drug discovery methods are the developing paradigms in bio-informatics ever since the "Next Industrial Revolution" possibilities started growing with computational power and technical human resources in biomedicine~\cite{Leelananda2016}.
 
-With the advent of new machine learning techniques and along with the rise of deep-learning techniques, we are closer to create a good prediction of analogy.
-However, the chemical properties of drugs and the targets complicate the situation as they react differently with slight change in protein sequence. Moreover, the complexes tend to behave similarly even when the protein sequences are distantly related, one of the results of tertiary structures that the proteins are form of.
 
-The deep learning methods are quite good at predicting the molecular behaviour of the drug. However they present no good means when predicting the behaviour of proteins. The major fallback being that the simple encoding techniques don’t incorporate the proteins behaviour related to hydrophobicity, acidity, secondary and tertiary structures information.
 
-The Stacked Generalized Prediction on the other hand works by basing the prediction guesses based on a number of prediction functions. Here, we use the sequence information of proteins to calculate the predictions on different feature transformation techniques and generalize those predictions using a stack of dense layers.
+
 \iffalse
 (52498, 254)
 180244
@@ -20,7 +15,7 @@ The Dataset we used scores the interaction of proteins and drugs based on Kb sco
 
 For citations, use the function \textbackslash cite. \cite{gowar1989power} The references file is the sample.bib one. Google Scholar provides almost all the references in LaTeX form.
 
-To insert a footnote, use the following command. \footnote{This is a footnote.} When necessary to use a nomenclature, define it on the same page for a better organization. Dont create NSN (Non-sense nomenclatures).
+To insert a footnote, use the following command. \footnote{This is a footnote.} When necessary to use a nomenclature, define it on the same page for a better organization. Don't create NSN (Non-sense nomenclatures).
 
 For figures, tables, equations and further information, open the file "tips.tex". If what you need is not found there, Google it.
 
@@ -40,7 +35,7 @@ For the protein family, the focus here is with the kinase target family because 
 
 
 \section{Objectives}
-The objectives of the research 
+The objectives of the research are:
 \begin{itemize}
     \item To determine the efficient different transformation matrices related to protein.
     \item To determine the right machine learning algorithm for modeling the protein-drug interactions.
