--- a/main.tex
+++ b/main.tex
@@ -8,7 +8,7 @@
 
 %%%%%%%%%%%%%%%%% DOCUMENT TYPE DEFINITION
 
-\documentclass[openright, a4paper, oneside, openany]{report}
+\documentclass[openright, a4paper, twoside, openany, 12pt]{report}
 
 %%%%%%%%%%%%%%%%% END OF DOCUMENT TYPE DEFINITION
 
@@ -47,6 +47,8 @@
 \let\thedate\@date
 \makeatother
 
+\setlength{\headheight}{15pt}
+
 %%%%%%%%%%%%%%%%% END OF PREAMBLE
 
 \newcommand{\rowstyle}[1]{\gdef\currentrowstyle{#1}%
@@ -61,7 +63,6 @@
 \frenchspacing
 
 % Frontmatter
-
 %\input{frontmatter/1-coverpage.tex}
 \input{frontmatter/2-titlepage.tex}
 \cleardoublepage
@@ -73,8 +74,19 @@
 
 
 \tableofcontents
+{
+\let\oldnumberline\numberline%
+\renewcommand{\numberline}{\figurename~\oldnumberline}%
 \listoffigures
+}
+{
+\let\oldnumberline\numberline%
+\renewcommand{\numberline}{\tablename~\oldnumberline}%
 \listoftables
+}
+\addtocontents{toc}{~\hfill\textbf{Page}\par}
+\addtocontents{lof}{~\hfill\textbf{Page}\par}
+\addtocontents{lot}{~\hfill\textbf{Page}\par}
 
 % \printnomenclature
 
@@ -87,8 +99,7 @@
 % Mainmatter
 
 
-
-
+% \renewcommand{\doublespacing}
 \input{mainmatter/1-Introduction/introduction.tex}
 \input{mainmatter/2-Development/development.tex}
 \input{mainmatter/3-Methodology/methodology.tex}
@@ -101,9 +112,10 @@
 \printglossary[type=\acronymtype]
 
 % Bibliography
+\renewcommand{\bibname}{References}
 \bibliographystyle{unsrt}
 \bibliography{bibliography/sample}
-\addcontentsline{toc}{chapter}{Bibliography}
+\addcontentsline{toc}{chapter}{References}
 
 
 
