--- a/bibliography/glossary.tex
+++ b/bibliography/glossary.tex
@@ -31,3 +31,6 @@
 \newacronym{rpt}{RPT}{Residue Probing Transformation}
 \newacronym{casp}{CASP}{Critical Assessment of Structure Prediction}
 \newacronym{nfl}{NFL}{No Free Lunch Algorithm}
+\newacronym{cadd}{CADD}{Computer-aided drug discovery}
+\newacronym{hts}{HTS}{High Throughput Screening}
+\newacronym{qsar}{QSAR}{Quantitative Structure Activity Relation}
