--- a/bibliography/__latexindent_temp.tex
+++ b/bibliography/__latexindent_temp.tex
@@ -1,15 +1,18 @@
-@article{Leelananda2016,
-abstract = {The process for drug discovery and development is challenging, time consuming and expensive. Computer-aided drug discovery (CADD) tools can act as a virtual shortcut, assisting in the expedition of this long process and potentially reducing the cost of research and development. Today CADD has become an effective and indispensable tool in therapeutic development. The human genome project has made available a substantial amount of sequence data that can be used in various drug discovery projects. Additionally, increasing knowledge of biological structures, as well as increasing computer power have made it possible to use computational methods effectively in various phases of the drug discovery and development pipeline. The importance of in silico tools is greater than ever before and has advanced pharmaceutical research. Here we present an overview of computational methods used in different facets of drug discovery and highlight some of the recent successes. In this review, both structure-based and ligand-based drug discovery methods are discussed. Advances in virtual high-throughput screening, protein structure prediction methods, protein-ligand docking, pharmacophore modeling and QSAR techniques are reviewed.},
-author = {Leelananda, Sumudu P. and Lindert, Steffen},
-doi = {10.3762/bjoc.12.267},
-file = {:Users/anupadkh/Downloads/sliwoski2013.pdf:pdf},
-issn = {18605397},
-journal = {Beilstein J. Org. Chem.},
-keywords = {ADME,Computer-aided drug design,Docking,Free energy,High-throughput screening,LBDD,Lead optimization,Machine learning,Pharmacophore,QSAR,SBDD,Scoring,Target flexibility},
+@article{Brown2017,
+abstract = {On October 5, 1981, Fortune magazine published a cover article entitled the "Next Industrial Revolution: Designing Drugs by Computer at Merck". With a 40+ year investment, we have been in the drug design business longer than most. During its history, the Merck drug design group has had several names, but it has always been in the "design" business, with the ultimate goal to provide an actionable hypothesis that could be tested experimentally. Often the result was a small molecule but it could just as easily be a peptide, biologic, predictive model, reaction, process, etc. To this end, the concept of design is now front and center in all aspects of discovery, safety assessment and early clinical development. At present, the Merck design group includes computational chemistry, protein structure determination, and cheminformatics. By bringing these groups together under one umbrella, we were able to align activities and capabilities across multiple research sites and departments. This alignment from 2010 to 2016 resulted in an 80{\%} expansion in the size of the department, reflecting the increase in impact due to a significant emphasis across the organization to "design first" along the entire drug discovery path from lead identification (LID) to first in human (FIH) dosing. One of the major advantages of this alignment has been the ability to access all of the data and create an adaptive approach to the overall LID to FIH pathway for any modality, significantly increasing the quality of candidates and their probability of success. In this perspective, we will discuss how we crafted a new strategy, defined the appropriate phenotype for group members, developed the right skillsets, and identified metrics for success in order to drive continuous improvement. We will not focus on the tactical implementation, only giving specific examples as appropriate.},
+author = {Brown, Frank K. and Sherer, Edward C. and Johnson, Scott A. and Holloway, M. Katharine and Sherborne, Bradley S.},
+doi = {10.1007/s10822-016-9993-1},
+file = {:Users/anupadkh/Downloads/brown2016.pdf:pdf},
+issn = {0920-654X},
+journal = {J. Comput. Aided. Mol. Des.},
+keywords = {CADD,Modeling,Predictive sciences},
 mendeley-groups = {Protein{\_}Drug{\_}Interaction/Drug{\_}Discovery},
-number = {January},
-pages = {2694--2718},
-title = {{Computational methods in drug discovery}},
-volume = {12},
-year = {2016}
+month = {mar},
+number = {3},
+pages = {255--266},
+publisher = {Springer International Publishing},
+title = {{The evolution of drug design at Merck Research Laboratories}},
+url = { http://link.springer.com/10.1007/s10822-016-9993-1},
+volume = {31},
+year = {2017}
 }
